--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,4 +1,20 @@
 
-<h1>navbar</h1>
+<form action="/task/add" method="POST">
 
-<h1>Hello World</h1>
+    <div>
+        <label for="title">Write a title:</label>
+            <input type="text" name="title" placeholder="title">
+    </div>
+
+    <div>
+        <label for="title">description</label>
+            <textarea 
+                name="description" 
+                placeholder="Description" 
+                id="description"
+            ></textarea>
+    </div>
+
+    <button>Add</button>
+
+</form>
