--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,5 +1,5 @@
 
-<form action="/task/add" method="POST">
+<form action="/tasks/add" method="POST">
 
     <div>
         <label for="title">Write a title:</label>
@@ -18,3 +18,11 @@
     <button>Add</button>
 
 </form>
+
+<pre>
+
+    {{#each tasks}}
+
+</pre>
+
+
