--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,28 +1,4 @@
 
-<form action="/tasks/add" method="POST">
+{{> tasks/taskForm }}
 
-    <div>
-        <label for="title">Write a title:</label>
-            <input type="text" name="title" placeholder="title">
-    </div>
-
-    <div>
-        <label for="title">description</label>
-            <textarea 
-                name="description" 
-                placeholder="Description" 
-                id="description"
-            ></textarea>
-    </div>
-
-    <button>Add</button>
-
-</form>
-
-<pre>
-
-    {{#each tasks}}
-
-</pre>
-
-
+{{> tasks/taskTable }}
