--- a/src/views/partials/tasks/taskTable.hbs
+++ b/src/views/partials/tasks/taskTable.hbs
@@ -16,9 +16,9 @@
                 <td>{{title}}</td>
                 <td>{{description}}</td>
                 <td>
-                    <button>edit</button>
-                    <button>Delete</button>
-                    <button>update</button>
+                    <a href="/done">done</a>
+                    <a href="/delete/{{_id}}">Delete</a>
+                    <a href="/edit/{{_id}}">Update</a>
                 </td>
             </tr>
         {{/each}}
