--- a/src/views/partials/tasks/taskTable.hbs
+++ b/src/views/partials/tasks/taskTable.hbs
@@ -16,9 +16,13 @@
                 <td>{{title}}</td>
                 <td>{{description}}</td>
                 <td>
-                    <a href="/done">done</a>
-                    <a href="/delete/{{_id}}">Delete</a>
-                    <a href="/edit/{{_id}}">Update</a>
+                    {{#if done}}
+                        <a href="/tasks/{{_id}}/toggleDone">Undone</a>
+                    {{else}}
+                        <a href="/tasks/{{_id}}/toggleDone">Done</a>
+                    {{/if}}
+                    <a href="/tasks/{{_id}}/delete">Delete</a>
+                    <a href="/tasks/{{_id}}/edit">Update</a>
                 </td>
             </tr>
         {{/each}}
