--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,4 +1,12 @@
+<div class="container p-5">
+  <div class="row">
 
-{{> tasks/taskForm }}
+    <div class="col-md-5">
+      {{> tasks/taskForm }}
+    </div>
 
-{{> tasks/taskTable }}
+    <div class="col-md-7">
+      {{> tasks/taskTable }}
+    </div>
+  </div>
+</div>
