--- a/src/views/edit.hbs
+++ b/src/views/edit.hbs
@@ -1,18 +1,33 @@
-<form action="/tasks/{{task._id}}/edit" method="POST">
+<div class="container">
+  <div class="row">
+    <!--FORM-->
+    <div class="col-md-5 offset-md-3">
+      <div class="card">
+        <div class="card-body">
+          <h1>Update Task</h1>
 
-<input 
-    type="text" 
-    name="title" 
-    placeholder="Title"
-    value="{{task.title}}"
->
-
-<textarea 
-    name="description"
-    rows="3" 
-    placeholder="Add a Description"
->{{task.description}}</textarea>
-
-<button>Update</button>
-
-</form>
+          <form action="/tasks/{{task._id}}/edit" method="post">
+            <div class="mb-3">
+              <input
+                class="form-control"
+                type="text"
+                name="title"
+                placeholder="Title"
+                value="{{task.title}}"
+              />
+            </div>
+            <div class="mb-3">
+              <textarea
+                class="form-control"
+                name="description"
+                rows="3"
+                placeholder="Add a Description"
+              >{{task.description}}</textarea>
+            </div>
+            <button class="btn btn-primary" type="submit">Update</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
