--- a/src/views/partials/tasks/taskForm.hbs
+++ b/src/views/partials/tasks/taskForm.hbs
@@ -1,21 +1,31 @@
+<div class="card card-body p-4 rounded-0 bg-dark text-white">
+  <h3>Add A Task</h3>
+  <form action="/tasks/add" method="post">
 
-<form action="/tasks/add" method="POST">
-
-    <div>
-        <label for="title">Write a title:</label>
-            <input type="text" name="title" placeholder="title">
+    {{! Title Input }}
+    <div class="mb-3">
+      <label for="title">Write a title:</label>
+      <input
+        id="title"
+        class="form-control rounded-0 bg-dark text-white"
+        type="text"
+        name="title"
+        placeholder="Title"
+        autofocus
+      />
     </div>
 
-    <div>
-        <label for="title">description</label>
-            <textarea 
-                name="description" 
-                placeholder="Description" 
-                id="description"
-            ></textarea>
+    {{! Description Input }}
+    <div class="mb-3">
+      <label for="description">Description</label>
+      <textarea
+        class="form-control rounded-0 bg-dark text-white"
+        name="description"
+        cols="80"
+        placeholder="Add a Description"
+      ></textarea>
     </div>
 
-    <button>Add</button>
-    
-
-</form>
+    <button class="btn btn-primary" type="submit">Add</button>
+  </form>
+</div>
